--- a/dot_config/rofi/config.rasi.tmpl
+++ b/dot_config/rofi/config.rasi.tmpl
@@ -1,6 +1,6 @@
 configuration {
 /*	modes: "window,drun,run,ssh";*/
-	font: "mono 16";
+	font: "mono {{if .hidpi}}16{{else}}12{{end}}";
 /*	location: 0;*/
 /*	yoffset: 0;*/
 /*	xoffset: 0;*/
