--- a/dot_config/dunst/dunstrc.tmpl
+++ b/dot_config/dunst/dunstrc.tmpl
@@ -86,7 +86,7 @@
 
     ### Text ###
 
-    font = Ubuntu 16
+    font = Ubuntu {{if .hidpi}}16{{else}}12{{end}}
 
     # The spacing between lines.  If the height is smaller than the
     # font height, it will get raised to the font height.
